# Test-Prism

./: README.md
cli/: .gitignore  Cargo.toml  Dockerfile
cli/e2e-tests/junit-e2e-tests/: build.gradle.kts  settings.gradle.kts
cli/e2e-tests/junit-e2e-tests/gradle/wrapper/: gradle-wrapper.properties
cli/src/: main.rs  test_report.rs
cli/src/commands/: mod.rs  tag_command.rs
cli/src/parsers/junit/: mod.rs
cli/tests/: integration_test.rs
cli/tests/data/junit/input/: TEST-com.testprism.NestedTests.xml  TEST-com.testprism.ParameterizedTests.xml  TEST-com.testprism.SkippedTest.xml
cli/tests/data/junit/output/: TEST-com.testprism.FailedTest.json  TEST-com.testprism.ParameterizedTests.json  TEST-com.testprism.TestWithMultipleTypes.json
parser/: Cargo.toml  Dockerfile
parser/src/: lib.rs  main.rs  test.rs  test_models.rs  test_report.rs
parser/src/commands/: mod.rs  parse_command.rs  tag_command.rs
parser/src/parsers/: mod.rs
parser/src/parsers/junit/: models.rs  parser.rs
parser/tests/: integration_test.rs
parser/tests/data/junit/input/: TEST-com.testprism.DisplayNameTest.xml  TEST-com.testprism.FailedTest.xml  TEST-com.testprism.NestedTests$DeeperNestedTest$EvenDeeperNestedTest.xml  TEST-com.testprism.NestedTests$InnerNestedTest.xml  TEST-com.testprism.SuccessTest.xml  TEST-com.testprism.TestWithMultipleTypes.xml
parser/tests/data/junit/output/: TEST-com.testprism.DisplayNameTest.json  TEST-com.testprism.FailedTest.json  TEST-com.testprism.NestedTests$DeeperNestedTest$EvenDeeperNestedTest.json  TEST-com.testprism.NestedTests$InnerNestedTest.json  (+6 more)
(+231 files in other folders)
