[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
chrono = "0.4.42"
regex = "1.10.5"

[dev-dependencies]
assert-json-diff = "2.0.2"
parameterized = "2.1.0"
tempfile = "3.24.0"
